src-rs/oneil_snapshot_tests/src/snapshots/oneil_snapshot_tests__test__analysis_dependency_tree_leaf.snap
---
source: src-rs/oneil_snapshot_tests/src/test.rs
expression: "run_dep_tree(\"basic/basic.on\", \"m\")"
---
dependency tree for `m`
m = 10 :kg
  = 10
