src-rs/oneil_snapshot_tests/src/snapshots/oneil_snapshot_tests__test__analysis_dependency_tree_transitive_chain.snap
---
source: src-rs/oneil_snapshot_tests/src/test.rs
expression: "run_dep_tree(\"gravity_mars.on\", \"c\")"
---
dependency tree for `c`
    ┌── g = 3.72 :m/s^2
    │     = 3.72
┌── h = 7.44 :m/s^2
│     = g * 2
c = 14.88 :m/s^2
  = h * 2
