src-rs/oneil_snapshot_tests/src/snapshots/oneil_snapshot_tests__test__analysis_independents_basic.snap
---
source: src-rs/oneil_snapshot_tests/src/test.rs
expression: "run_independents(\"basic/basic.on\", false)"
---
m = 10 :kg
a = 9.81 :m/s^2
t = 90 :N
