src-rs/oneil_snapshot_tests/src/snapshots/oneil_snapshot_tests__test__analysis_independents_recursive_with_ref.snap
---
source: src-rs/oneil_snapshot_tests/src/test.rs
expression: "run_independents(\"analysis/force_with_ref.on\", true)"
---
fixtures/analysis/force_with_ref.on:
m = 10 :kg
fixtures/analysis/../gravity_earth.on:
g = 9.81 :m/s^2
