src-rs/oneil_snapshot_tests/src/snapshots/oneil_snapshot_tests__test__analysis_independents_transitive_chain.snap
---
source: src-rs/oneil_snapshot_tests/src/test.rs
expression: "run_independents(\"gravity_mars.on\", false)"
---
g = 3.72 :m/s^2
