src-rs/oneil_snapshot_tests/src/snapshots/oneil_snapshot_tests__test__analysis_reference_tree_basic_mass.snap
---
source: src-rs/oneil_snapshot_tests/src/test.rs
expression: "run_ref_tree(\"basic/basic.on\", \"m\")"
---
reference tree for `m`
┌── fixtures/basic/basic.on test = PASS
│                                = f > t
┌── fixtures/basic/basic.on f = 98.1 :N
│                             = m * a
fixtures/basic/basic.on m = 10 :kg
                          = 10
